    * 3566 FIX: Fixed exception on SNMP MIB management page when MIB directory is missing
    * 3568 FIX: Fixed broken link in "Access to event status via TCP" help text
    * 3589 FIX: Fixed processing of RFC 5424 syslog messages
    * 3771 FIX: Fixed exception on edit rule page in case of special URLs

    Livestatus:
    * 3644 Fixed 'source' column in 'comments' table.
    * 3233 FIX: Fixed shutdown of Nagios core with Livestatus module...
    * 3235 FIX: Unbreak COMMAND handling...
    * 3646 FIX: Fixed Livestatus output formats...

    HW/SW-Inventory:
    * 3192 snmp_extended_info: now inventorizes all physical components of devices which support the ENTITY-MIB
    * 3319 HW/SW-Inventory service can now be OK in case of unreachable host...
    * 3322 esx_vsphere_hostsystem: inventory now adds information about memory, uuid and service tag...
    * 3028 statgrab_mem, solaris_mem: updated inventory plugins for solaris systems...
    * 3447 mssql_versions: Added inventory plugin for MSSQL instances
    * 3581 mssql_versions: Added product name to inventory information
    * 3585 Implemented API for exporting the full host inventory...
    * 3591 mssql_clusters: Added information about nodes to MSSQL instance inventory
    * 3550 HW/SW inventory: Now able to raise an alert when SW packages info is missing...
    * 3219 FIX: lnx_distro: Now detecting Oracle VM Server correctly
    * 3229 FIX: lnx_distro: SLES based systems have now an OS name inventorized\
    * 3265 FIX: mk_inventory.solaris: fix problem on Solaris 10, do prtdiag and prtpicl only in global zone
    * 3289 FIX: Fixed missing filters in HW-/SW-Inventory views after editing the view...
    * 3013 FIX: Inventory: snmp inventory plugins never use cached data...
    * 3340 FIX: Fixed exception when searching for software package sizes
    * 3025 FIX: solaris_pkginfo: the last element of the reported software package list was always missing