@@ -675,6 +675,7 @@
     * 3568 FIX: Fixed broken link in "Access to event status via TCP" help text
     * 3589 FIX: Fixed processing of RFC 5424 syslog messages
     * 3771 FIX: Fixed exception on edit rule page in case of special URLs
+    * 3745 FIX: MIB uploads: Handle latin-1 encoded MIBs
 
     Livestatus:
     * 3644 Fixed 'source' column in 'comments' table.
